[gd_scene load_steps=3 format=3 uid="uid://s0gidm36vhaw"]

[ext_resource type="Script" uid="uid://1fljvqcm6gtr" path="res://Scripts/UI/PauseMeneuUI.gd" id="1_tocsm"]

[sub_resource type="LabelSettings" id="LabelSettings_fphqf"]
font_size = 50

[node name="PauseMenuUI" type="Control" unique_id=37438969 node_paths=PackedStringArray("resume_button", "save_game_button", "load_game_button", "settings_button", "exit_menu_button", "exit_button", "visual")]
process_mode = 3
custom_minimum_size = Vector2(450, 600)
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_tocsm")
resume_button = NodePath("Panel/VBoxContainer/Resume Button")
save_game_button = NodePath("Panel/VBoxContainer/Save Button")
load_game_button = NodePath("Panel/VBoxContainer/Load Button")
settings_button = NodePath("Panel/VBoxContainer/Settings Button")
exit_menu_button = NodePath("Panel/VBoxContainer/Exit Menu Button")
exit_button = NodePath("Panel/VBoxContainer/Exit Game Button")
start_hidden = true
input_key = 4194305
visual = NodePath("Panel")
metadata/_custom_type_script = "uid://1fljvqcm6gtr"

[node name="Panel" type="PanelContainer" parent="." unique_id=1206175249]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel" unique_id=250973829]
layout_mode = 2
theme_override_constants/separation = 5

[node name="Label" type="Label" parent="Panel/VBoxContainer" unique_id=1226883732]
custom_minimum_size = Vector2(0, 75)
layout_mode = 2
text = "Game Paused"
label_settings = SubResource("LabelSettings_fphqf")
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Panel/VBoxContainer" unique_id=940928677]
layout_mode = 2
theme_override_constants/separation = 25

[node name="Resume Button" type="Button" parent="Panel/VBoxContainer" unique_id=972920712]
custom_minimum_size = Vector2(0, 75)
layout_mode = 2
text = "Resume"

[node name="Save Button" type="Button" parent="Panel/VBoxContainer" unique_id=192242924]
custom_minimum_size = Vector2(0, 75)
layout_mode = 2
text = "Save"

[node name="Load Button" type="Button" parent="Panel/VBoxContainer" unique_id=1756924872]
custom_minimum_size = Vector2(0, 75)
layout_mode = 2
text = "Load
"

[node name="Settings Button" type="Button" parent="Panel/VBoxContainer" unique_id=847908345]
custom_minimum_size = Vector2(0, 75)
layout_mode = 2
text = "Settings"

[node name="Exit Menu Button" type="Button" parent="Panel/VBoxContainer" unique_id=1914454643]
custom_minimum_size = Vector2(0, 75)
layout_mode = 2
text = "Exit to Menu="

[node name="Exit Game Button" type="Button" parent="Panel/VBoxContainer" unique_id=384332745]
custom_minimum_size = Vector2(0, 75)
layout_mode = 2
text = "Exit Game"

[connection signal="pressed" from="Panel/VBoxContainer/Resume Button" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Save Button" to="." method="_on_save_button_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Load Button" to="." method="_on_load_button_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Settings Button" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Exit Menu Button" to="." method="_on_exit_menu_button_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Exit Game Button" to="." method="_on_exit_game_button_pressed"]
